--- a/preamble.tex
+++ b/preamble.tex
@@ -205,8 +205,8 @@
 \newcommand*{\decode}[2][]{\fndecode[#1]\left(#2\right)}
 \newcommand*{\mmrencode}[1]{\fnmmrencode\left(#1\right)}
 \newcommand*{\fyshuffle}[1]{\fnfyshuffle\left(#1\right)}
-\newcommand*{\blake}[2][]{\fnblake_{#1}\left(#2\right)}
-\newcommand*{\blakemany}[2][]{\fnblake^\#_{#1}\left(#2\right)}
+\newcommand*{\blake}[1]{\fnblake\left(#1\right)}
+\newcommand*{\blakemany}[1]{\fnblake^\#\left(#1\right)}
 \newcommand*{\keccak}[1]{\fnkeccak\left(#1\right)}
 \newcommand*{\merklejustsubpath}[2]{\fnmerklejustsubpath{#1}\left(#2\right)}
 \newcommand*{\keys}[1]{\mathcal{K}\left(#1\right)}
