--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -10,9 +10,9 @@ We define the state-key constructor functions $C$ as:
 \begin{equation}
   C\colon\abracegroup{
     \Nbits{8} \cup \tup{\Nbits{8}, \serviceid} \cup \tup{\serviceid, \blob} &\to \bloboflen{31} \\
-    i \in \Nbits{8} &\mapsto [i, 0, 0, \dots] \\
-    \tup{i, s \in \serviceid} &\mapsto \sq{i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots}\ \where n = \fixedencode{4}{s} \\
-    \tup{s, h} &\mapsto \sq{n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}}\ \where n = \fixedencode{4}{s}, a = \blake{h}\interval{0}{27}
+    i \in \Nbits{8} &\mapsto \sq{i, 0, 0, \dots} \\
+    \tup{i, s \in \serviceid} &\mapsto \sq{i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots}\ \where n = \encode[4]{s} \\
+    \tup{s, h} &\mapsto \sq{n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}}\ \where n = \encode[4]{s}, a = \blake{h}\interval{0}{27}
   }
 \end{equation}
 
@@ -51,18 +51,18 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(9) &\mapsto \encode{\previousset} \;, \\
     &&C(10) &\mapsto \encode{
       \sq{\build{
-        \maybe{\tup{\rs¬workreport, \fixedencode{4}{\rs¬timestamp}}}
+        \maybe{\tup{\rs¬workreport, \encode[4]{\rs¬timestamp}}}
       }{
         \tup{\rs¬workreport, \rs¬timestamp} \orderedin \reports
       }}
     } \;, \\
-    &&C(11) &\mapsto \fixedencode{4}{\thetime} \;, \\
+    &&C(11) &\mapsto \encode[4]{\thetime} \;, \\
     &&C(12) &\mapsto \encode{
-      \fixedencode{4}{\manager, \assigners, \delegator},
+      \encode[4]{\manager, \assigners, \delegator},
       \alwaysaccers
     } \;, \\
     &&C(13) &\mapsto \encode{
-      \fixedencode{4}{\valstatsaccumulator, \valstatsprevious},
+      \encode[4]{\valstatsaccumulator, \valstatsprevious},
       \corestats,
       \servicestats
     } \;, \\
@@ -81,18 +81,18 @@ The state serialization is then defined as the dictionary built from the amalgam
       \sq{\build{\var{\mathbf{i}}}{\mathbf{i} \orderedin \accumulated}}
     } \;, \\
     &&C(16) &\mapsto \encode{
-      \var{\sq{\build{\tup{\fixedencode{4}{s}, \encode{h}}}{\tup{s, h} \orderedin \lastaccout}}}
+      \var{\sq{\build{\tup{\encode[4]{s}, \encode{h}}}{\tup{s, h} \orderedin \lastaccout}}}
     } \;, \\
     \forall \kv{s}{\saX} \in \accounts: &&C(255, s) &\mapsto \encode{
       \saX_\sa¬codehash,
-      \fixedencode{8}{
+      \encode[8]{
         \saX_\sa¬balance,
         \saX_\sa¬minaccgas,
         \saX_\sa¬minmemogas,
         \saX_\sa¬octets,
         \saX_\sa¬gratis
       },
-      \fixedencode{4}{
+      \encode[4]{
         \saX_\sa¬items,
         \saX_\sa¬created,
         \saX_\sa¬lastacc,
@@ -100,12 +100,12 @@ The state serialization is then defined as the dictionary built from the amalgam
       }
     } \;, \\
     \forall \kv{s}{\saX} \in \accounts, \kv{\mathbf{k}}{\mathbf{v}} \in \saX_\sa¬storage:
-      &&C(s, \fixedencode{4}{2^{32}-1} \concat \mathbf{k}) &\mapsto \mathbf{v} \;, \\
+      &&C(s, \encode[4]{2^{32}-1} \concat \mathbf{k}) &\mapsto \mathbf{v} \;, \\
     \forall \kv{s}{\saX} \in \accounts, \kv{h}{\mathbf{p}} \in \saX_\sa¬preimages:
-      &&C(s, \fixedencode{4}{2^{32}-2} \concat h) &\mapsto \mathbf{p} \;, \\
+      &&C(s, \encode[4]{2^{32}-2} \concat h) &\mapsto \mathbf{p} \;, \\
     \forall \kv{s}{\saX} \in \accounts, \kv{\tup{h, l}}{\mathbf{t}} \in \saX_\sa¬requests:
-      &&C(s, \fixedencode{4}{l} \concat h) &\mapsto \encode{
-        \var{\sq{\build{\fixedencode{4}{x}}{x \orderedin \mathbf{t}}}}
+      &&C(s, \encode[4]{l} \concat h) &\mapsto \encode{
+        \var{\sq{\build{\encode[4]{x}}{x \orderedin \mathbf{t}}}}
       }
   }
 \end{equation}
@@ -137,13 +137,13 @@ Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\abracegroup{
     \tuple{\hash, \hash} &\to \bitstringoflen{512}\\
-    \tup{l, r} &\mapsto [0] \concat \text{bits}(l)\interval{1}{} \concat \text{bits}(r)
+    \tup{l, r} &\mapsto \sq{0} \concat \text{bits}(l)\interval{1}{} \concat \text{bits}(r)
   }\\
   L&\colon\abracegroup{
     \tuple{\bloboflen{31}, \blob} &\to \bitstringoflen{512}\\
     \tup{k, v} &\mapsto \begin{cases}
-      [1, 0] \concat \text{bits}(\fixedencode{1}{\len{v}})\interval{2}{} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
-      [1, 1, 0, 0, 0, 0, 0, 0] \concat \text{bits}(k) \concat \text{bits}(\blake{v}) &\otherwise
+      \sq{1, 0} \concat \text{bits}(\encode[1]{\len{v}})\interval{2}{} \concat \text{bits}(k) \concat \text{bits}(v) \concat \sq{0, 0, \dots} &\when \len{v} \le 32\\
+      \sq{1, 1, 0, 0, 0, 0, 0, 0} \concat \text{bits}(k) \concat \text{bits}(\blake{v}) &\otherwise
     \end{cases}
   }
 \end{align}
@@ -187,8 +187,8 @@ We also define the \emph{trace} function $T$, which returns each opposite node f
   T\colon\abracegroup{
     \tuple{\sequence{\bloboflen{n}}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash}\ &\to \sequence{\bloboflen{n} \cup \hash}\\
     \tup{\mathbf{v}, i, H} &\mapsto \begin{cases}
-      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
-      [] &\otherwise\\
+     \sq{N(P^\bot(\mathbf{v}, i), H)} \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
+      \sq{} &\otherwise\\
       \multicolumn{2}{l}{
         \begin{aligned}
           \quad \where P^s(\mathbf{v}, i) &\equiv \begin{cases}
@@ -253,7 +253,7 @@ For justifications and Merkle root calculations, a constancy preprocessor functi
   C\colon\abracegroup{
     \tuple{\sequence{\blob}, \blob \to \hash} &\to \sequence{\hash}\\
     \tup{\mathbf{v}, H} &\mapsto \mathbf{v}' \ \where \abracegroup[\;]{
-      \len{\mathbf{v}}| &= 2^{\ceil{\log_2(\max(1, \len{\mathbf{v}}))}}\\
+      \len{\mathbf{v}} &= 2^{\ceil{\log_2(\max(1, \len{\mathbf{v}}))}}\\
       \mathbf{v}'\sub{i} &= \begin{cases}
         H(\token{\$leaf} \concat \mathbf{v}\sub{i}) &\when i < \len{\mathbf{v}}\\
         \zerohash &\otherwise \\
@@ -297,7 +297,7 @@ We define the \textsc{mmr} encoding function as $\fnmmrencode$:
 \begin{equation}
   \fnmmrencode\colon\deffunc{
     \sequence{\optional{\hash}} &\to \blob \\
-    \mathbf{b} &\mapsto \encode{\var{[\maybe{x}\mid x \orderedin \mathbf{b}]}}
+    \mathbf{b} &\mapsto \encode{\var{\sq{\build{\maybe{x}}{x \orderedin \mathbf{b}}}}}
   }
 \end{equation}
 
@@ -309,7 +309,7 @@ We define the \textsc{mmr} super-peak function as $\fnmmrsuperpeak$:
       \zerohash &\when \len{\mathbf{h}} = 0\\
       \mathbf{h}_0 &\when \len{\mathbf{h}} = 1\\
       \keccak{\token{\$peak} \concat \mmrsuperpeak{\mathbf{h}_{\dots\len{\mathbf{h}}-1}} \concat \mathbf{h}_{\len{\mathbf{h}}-1}} &\otherwise \\
-      \multicolumn{2}{l}{\where \mathbf{h} = \sq{h \mid h \orderedin \mathbf{b}, h \ne \none}}
+      \multicolumn{2}{l}{\where \mathbf{h} = \sq{\build{h}{h \orderedin \mathbf{b}, h \ne \none}}}
     \end{cases}
   }
 \end{equation}
